# trivial

./: .clang-tidy  CMakeLists.txt  README.md  parser.toml
src/: casting.hpp  common.hpp  main.cpp
src/conv/: codegen.cpp  codegen.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  ssa.cpp  ssa.hpp  token.hpp  typeck.cpp  typeck.hpp
src/passes/: pass_manager.cpp  pass_manager.hpp
src/passes/asm/: allocate_register.cpp  allocate_register.hpp  compute_stack_info.cpp  compute_stack_info.hpp  if_to_cond.cpp  if_to_cond.hpp  scheduling.cpp  scheduling.hpp  simplify_asm.cpp  simplify_asm.hpp
src/passes/ir/: BasicBlockOpt.hpp  CFG.hpp  ComputeCallGraph.hpp  MarkGlobalConst.hpp  RemoveUnusedFunction.hpp  bbopt.cpp  bbopt.hpp  callgraph.cpp  callgraph.hpp  cfg.cpp  cfg.hpp  dce.cpp  dce.hpp  dead_store_elim.cpp  dead_store_elim.hpp  extract_stack_array.cpp  extract_stack_array.hpp  gvn_gcm.cpp  gvn_gcm.hpp  inline_func.cpp  inline_func.hpp  loop_unroll.cpp  loop_unroll.hpp  mark_global_const.cpp  mark_global_const.hpp  mem2reg.cpp  mem2reg.hpp  memdep.cpp  memdep.hpp  remove_identical_branch.cpp  remove_identical_branch.hpp  remove_unused_function.cpp  remove_unused_function.hpp  remove_useless_loop.cpp  remove_useless_loop.hpp
src/structure/: ast.cpp  ast.hpp  ir.cpp  ir.hpp  machine_code.cpp  machine_code.hpp  op.hpp
test/: .gitignore  Makefile  bench.py  sysy.c  sysy.h  test.py  test_asm_debug.py  test_asm_release.py  test_ir_debug.py  test_ir_release.py
testcase/functional/: 001_var_defn.c  002_var_defn2.c  003_var_defn3.c  004_arr_defn.c  005_arr_defn2.c  007_arr_defn4.c  008_const_var_defn.c  009_const_var_defn2.c  010_const_var_defn3.c  014_add.c  015_add2.c  016_addc.c  017_sub.c  018_sub2.c  019_subc.c  01_var_defn.c  020_mul.c  021_mulc.c  022_div.c  023_divc.c  024_mod.c  025_rem.c  028_if_test1.c  029_if_test2.c  02_arr_defn4.c  02_var_defn2.c  030_if_test3.c  033_while_if.c  036_while_test3.c  037_break.c  038_continue.c  039_while_if_test1.c  03_var_defn2.c  043_op_priority1.c  044_op_priority2.c  045_op_priority3.c  046_op_priority4.c  047_op_priority5.c  048_stmt_expr.c  049_unary_op.c  (+142 more)
testcase/performance/: 00_bitset2.c  01_mm1.c  02_mv2.c  03_sort3.c  04_spmv2.c  conv0.c  conv2.c  crypto-1.c  dead-code-elimination-2.c  fft2.c  floyd-2.c  hoist-1.c  instruction-combining-3.c  integer-divide-optimization-1.c  median2.c  shuffle1.c  sl3.c  stencil0.c  stencil1.c  transpose2.c
